# nooda

./: .gitignore  README.md  example.ipynb  pyproject.toml
.github/workflows/: ci.yaml
chartlib/: agg.py  fonts.py  ops.py
nooda/: __init__.py
nooda/chart/: agg.py  fonts.py  formatter.py  ops.py
nooda/publish/: __init__.py  __main__.py  base.html  magic.py
nooda/slack/: __init__.py  magic.py  send.py
tests/: test_ops.py
tests/chart/: test_agg.py  test_ops.py
