[tool.poetry]
name = "chartlib"
version = "0.1.0"
description = ""
authors = ["Tom Booth <tom.booth@rvu.co.uk>"]
readme = "README.md"
packages = [{include = "chartlib"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
