[tool.poetry]
name = "nooda"
version = "0.1.0"
description = ""
authors = ["Tom Booth <tom.booth@rvu.co.uk>"]
readme = "README.md"
packages = [{include = "nooda"}]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
slack-sdk = "^3.21.3"
nbformat = "^5.9.1"
marko = "^2.0.0"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pandas = "^2.0.2"
ipykernel = "^6.23.1"
nbconvert = "^7.4.0"
pyarrow = "^12.0.0"
db-dtypes = "^1.1.1"
ipywidgets = "^8.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
